# sleep

./: .gitignore  .stylish-haskell.yaml  LICENSE  Makefile  README.md  cabal.project  package.yaml  sleep.cabal  stack.yaml
apps/tpd/: Main.hs
core/: sleep-core.cabal
core/src/: Prelude.hs
scripts/: count_extensions.sh  imports_graph.sh  remove_extensions.sh
src/TumblrPhotoDownloader/: Main.hs
src/Tutorial/: Checker.hs  Tumblr.lhs  Tumblr.md
src/Web/: Sleep.hs
src/Web/Sleep/: Tumblr.hs
src/Web/Sleep/Common/: Call.hs  Config.hs  Misc.hs  Network.hs
src/Web/Sleep/Common/Helpers/: Base.hs  Request.hs
src/Web/Sleep/Libs/: Base.hs  Request.hs
src/Web/Sleep/Tumblr/: Auth.hs  Call.hs  Context.hs  Data.hs  DataTest.hs  Error.hs  Methods.hs  Network.hs  Query.hs  QueryTest.hs  Response.hs  ResponseTest.hs  Simple.hs
src/Web/Sleep/Tutorial/: Tumblr.md
test/: InteractiveMode.hs  Tests.hs
tests/tumblr/: DataTest.hs  QueryTest.hs  ResponseTest.hs  Tests.hs
tumblr/: sleep-tumblr.cabal
tumblr/src/Web/Sleep/: Tumblr.hs
