name:                sleep
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nicuveo/sleep#readme
author:              Antoine Leblamc
maintainer:          nicuveo@gmail.com
copyright:           2017 Antoine Leblanc
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fwarn-tabs
                       -O2
  default-language:    Haskell2010
  default-extensions:  BangPatterns
                       EmptyCase
                       OverloadedStrings
                       -- ApplicativeDo
                       -- ConstraintKinds
                       -- DataKinds
                       -- DefaultSignatures
                       -- DeriveFoldable
                       -- DeriveFunctor
                       -- DeriveGeneric
                       -- DeriveLift
                       -- DeriveTraversable
                       -- DerivingStrategies
                       -- ExistentialQuantification
                       -- FlexibleContexts
                       -- FlexibleInstances
                       -- FunctionalDependencies
                       -- GADTs
                       -- GeneralizedNewtypeDeriving
                       -- InstanceSigs
                       -- KindSignatures
                       -- LambdaCase
                       -- MultiParamTypeClasses
                       -- MultiWayIf
                       -- NamedFieldPuns
                       -- PatternSynonyms
                       -- RankNTypes
                       -- ScopedTypeVariables
                       -- StandaloneDeriving
                       -- TupleSections
                       -- TypeApplications
                       -- TypeFamilies
                       -- TypeFamilyDependencies
                       -- TypeOperators
  exposed-modules:     Web.Sleep,
                       Web.Sleep.Common.Misc,
                       Web.Sleep.Common.Network,
                       Web.Sleep.Tumblr,
                       Web.Sleep.Tumblr.Auth,
                       Web.Sleep.Tumblr.Context,
                       Web.Sleep.Tumblr.Data,
                       Web.Sleep.Tumblr.Error,
                       Web.Sleep.Tumblr.Methods,
                       Web.Sleep.Tumblr.Query,
                       Web.Sleep.Tumblr.Response
  build-depends:       base >= 4.7 && < 5,
                       MissingH,
                       aeson,
                       authenticate-oauth,
                       bytestring,
                       containers,
                       http-client,
                       http-types,
                       iso8601-time,
                       ixset,
                       mtl,
                       network-uri,
                       safe-exceptions,
                       text,
                       time,
                       transformers,
                       url,
                       vector

-- test-suite sleep-test
--   type:                exitcode-stdio-1.0
--   hs-source-dirs:      test
--   main-is:             Spec.hs
--   build-depends:       base
--                      , sleep
--   ghc-options:         -threaded -rtsopts -with-rtsopts=-N
--   default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nicuveo/sleep
