name:                sleep
version:             0.0.0.0
-- synopsis:
-- description:
homepage:            https://github.com/nicuveo/sleep#readme
author:              Antoine Leblamc
maintainer:          nicuveo@gmail.com
copyright:           2017 Antoine Leblanc
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fwarn-tabs
                       -O2
  default-language:    Haskell2010
  exposed-modules:     Web.Sleep,
                       Web.Sleep.Tumblr,
                       Web.Sleep.Tumblr.Auth,
                       Web.Sleep.Tumblr.Data,
                       Web.Sleep.Tumblr.Error,
                       Web.Sleep.Tumblr.Network,
                       Web.Sleep.Tumblr.Query,
                       Web.Sleep.Tumblr.Response,
                       Web.Sleep.Tumblr.Simple
  other-modules:       Web.Sleep.Common.Misc,
                       Web.Sleep.Common.Network
  build-depends:       base >= 4.7 && < 5,
                       MissingH,
                       aeson,
                       authenticate-oauth,
                       bytestring,
                       containers,
                       http-client,
                       http-client-tls,
                       http-types,
                       iso8601-time,
                       ixset,
                       mtl,
                       network-uri,
                       resourcet,
                       safe-exceptions,
                       text,
                       time,
                       transformers,
                       uri-encode,
                       vector

executable tumblr-photo-download
  main-is:             Main.hs
  hs-source-dirs:      src/TumblrPhotoDownloader
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fwarn-tabs
                       -O2
                       -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.7 && < 5, sleep,
                       aeson,
                       bytestring,
                       conduit,
                       conduit-extra,
                       directory,
                       filepath,
                       http-client,
                       http-conduit,
                       mtl,
                       resourcet,
                       uri-encode

test-suite sleep-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test,src
  main-is:             Tests.hs
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fwarn-tabs
                       -O2
                       -threaded -rtsopts -with-rtsopts=-N -fhpc
  default-language:    Haskell2010
  other-modules:       Web.Sleep.Common.Misc,
                       Web.Sleep.Common.Network,
                       Web.Sleep.Tumblr.Auth,
                       Web.Sleep.Tumblr.Data,
                       Web.Sleep.Tumblr.DataTest,
                       Web.Sleep.Tumblr.Error,
                       Web.Sleep.Tumblr.Network,
                       Web.Sleep.Tumblr.Query,
                       Web.Sleep.Tumblr.QueryTest,
                       Web.Sleep.Tumblr.Response,
                       Web.Sleep.Tumblr.ResponseTest
  build-depends:       base >= 4.7 && < 5,
                       MissingH,
                       aeson,
                       authenticate-oauth,
                       bytestring,
                       containers,
                       http-client,
                       http-client-tls,
                       http-types,
                       iso8601-time,
                       ixset,
                       mtl,
                       network-uri,
                       QuickCheck,
                       resourcet,
                       safe-exceptions,
                       text,
                       time,
                       transformers,
                       tasty,
                       tasty-hunit,
                       tasty-quickcheck,
                       uri-encode,
                       vector

test-suite tutorial-check
  type:                exitcode-stdio-1.0
  hs-source-dirs:      src/Tutorial
  main-is:             Checker.hs
  ghc-options:         -Wall
                       -Wcompat
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wredundant-constraints
                       -fno-warn-type-defaults
                       -fno-warn-unused-do-bind
                       -fwarn-tabs
                       -O2
                       -threaded -rtsopts -with-rtsopts=-N -fhpc
                       -pgmL markdown-unlit
  default-language:    Haskell2010
  other-modules:       Tumblr
  build-depends:       base >= 4.7 && < 5, sleep,
                       MissingH,
                       aeson,
                       authenticate-oauth,
                       bytestring,
                       containers,
                       http-client,
                       http-client-tls,
                       http-types,
                       iso8601-time,
                       ixset,
                       markdown-unlit,
                       mtl,
                       network-uri,
                       resourcet,
                       safe-exceptions,
                       text,
                       time,
                       transformers,
                       uri-encode,
                       vector

source-repository head
  type:     git
  location: https://github.com/nicuveo/sleep
